--- a/sales.html
+++ b/sales.html
@@ -7,7 +7,13 @@
   <body>
     <header>
       <h1>Sales Data!</h1>
-    </header>
+        <nav>
+            <ul>
+                <li><a href="./index.html">HomePage</a></li>
+                <li><a href="./sales.html">Sales Data</a></li>
+            </ul>
+        </nav>
+          </header>
     <main>
       <h2> The Number of Pat’s Salmon Cookies in each location:</h2>
       <div id="locationSales">
