--- a/sales.html
+++ b/sales.html
@@ -16,7 +16,7 @@
           </header>
     <main>
       <h2> The Number of Pat’s Salmon Cookies in each location:</h2>
-      <div id="locationSales">
+      <div id='Sales'>
         <!-- Pat’s Salmon Cookies, soon with franchises internationally, needs to calculate the number of cookies each location
             must make every day so that it can manage its supplies inventory and baking schedule: -->
         <!-- <article>
