Table had been created

--- a/sales.html
+++ b/sales.html
@@ -16,7 +16,7 @@
           </header>
     <main>
       <h2> The Number of Pat’s Salmon Cookies in each location:</h2>
-      <div id="locationSales">
+      <table id="locationSales">
         <!-- Pat’s Salmon Cookies, soon with franchises internationally, needs to calculate the number of cookies each location
             must make every day so that it can manage its supplies inventory and baking schedule: -->
         <!-- <article>
@@ -40,7 +40,7 @@ Total: 875 cookies</li>
             <li>Total</li>
           </ul>
                  </article> -->
-      </div>
+      </table>
     </main>
     <footer>
     </footer>
