--- a/sales.html
+++ b/sales.html
@@ -17,29 +17,7 @@
     <main>
       <h2> The Number of Pat’s Salmon Cookies in each location:</h2>
       <table id="locationSales">
-        <!-- Pat’s Salmon Cookies, soon with franchises internationally, needs to calculate the number of cookies each location
-            must make every day so that it can manage its supplies inventory and baking schedule: -->
-        <!-- <article>
-          <h2>Frankie</h2>
-             <ul>
-            <li>6am: 16 cookies
-7am: 20 cookies
-8am: 35 cookies
-9am: 48 cookies
-10am: 56 cookies
-11am: 77 cookies
-12pm: 93 cookies
-1pm: 144 cookies
-2pm: 119 cookies
-3pm: 84 cookies
-4pm: 61 cookies
-5pm: 23 cookies
-6pm: 42 cookies
-7pm: 57 cookies
-Total: 875 cookies</li>
-            <li>Total</li>
-          </ul>
-                 </article> -->
+        <!-- DOM -->
       </table>
     </main>
     <footer>
