--- a/sales.html
+++ b/sales.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Pat’s Salmon Cookies</title>
-    <link href="css/style.css" type="text/css" rel="stylesheet"/>
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Salmon Cookies</title>
+  <link rel="stylesheet" href="./css/reset.css" />
+  <link href="./css/style.css" type="text/css" rel="stylesheet" />
+</head>
+
+<body>
     <header>
-      <h1>Sales Data!</h1>
-        <nav>
-            <ul>
-                <li><a href="./index.html">HomePage</a></li>
-                <li><a href="./sales.html">Sales Data</a></li>
-            </ul>
-        </nav>
-          </header>
+    <h1>Welcome to Salmon's Cookies </h1> 
+    <nav>
+      <a href="./index.html">Home</a>
+      <a href="./sales.html">Sales</a>
+    </nav>
+    <img src="./img/salmonLogo.png" alt="SalmonPic" id="SalmonPic" class="header-logo">
+  </header>
     <main>
+      <div class="salesMain">
       <h2> The Number of Pat’s Salmon Cookies in each location:</h2>
       <table id="locationSales">
         <!-- DOM -->
       </table>
+    </div>
     </main>
     <footer>
+      all right reserved &copy;2021
     </footer>
     <script src="js/app.js"></script>
   </body>
