--- a/sales.html
+++ b/sales.html
@@ -27,21 +27,21 @@
           <input type="text" name="" id="locName">
   
           <label for="minperCust">Min / Cust</label>
-          <input type="text" name="" id="minperCust">
+          <input type="text" name="" id="minCust">
   
           <label for="maxperCust">Max / Cust	</label>
-          <input type="text" name="" id="maxperCust">
+          <input type="text" name="" id="maxCust">
   
-          <label for="avgCookieperSale2">Avg Cookie / Sale	</label>
-          <input type="text" name="" id="avgCookieperSale2">
+          <label for="avgCust">Avg Cookie / Sale	</label>
+          <input type="text" name="" id="avgCust">
 
-            <input type="submit" value="Save">
+          <input type="submit" value="Save">
         </form> 
       </fieldset>
 
       <div class="salesMain">
       <h2 class="salesheading2"> The Number of Pat’s Salmon Cookies in each location:</h2>
-      <table id="locationSales">
+      <table id="infoSales">
         <!-- DOM -->
       </table>
     </div>
