finished the last page

--- a/shop.html
+++ b/shop.html
@@ -35,15 +35,14 @@
     <img src="./img/salmonLogo.png" alt="SalmonPic" id="SalmonPic" >
   </div>
   </header>
-  <main>
+  <main class="shopPage" style="background-image: url('./img/brand--palms.jpg');">
 
-    <div class="frontPage">
-<img src="./img/fish.jpg" alt="" class="fishHori">
-<section class="shopsSection">
+
+
     <section class="cookiesSection">
 
       <section>
-        <p>Salmon Cookies!</p>
+        <h1 style=" margin-left: 30px; margin-bottom: 10px; color: rgb(221, 24, 90); font-weight: bolder;"> Salmon Cookies!</h1>
       </section>
 
       <section class="cookieImgSec">
@@ -52,7 +51,7 @@
       </section>
 
       <section>
-        <p>we made Salmon Cookies with love using this cutter</p>
+        <h2 style="margin-top: 20px;">we made Salmon Cookies with love using this cutter</h2>
       </section>
     </section>
 
@@ -60,22 +59,20 @@
 
     <section class="ShirtSection">
       <section>
-        <p>Salmon Shirt!</p>
+        <h1 style=" margin-left: 30px; margin-bottom: 10px; color: rgb(221, 24, 90); font-weight: bolder;">Salmon Shirt!</h1>
       </section>
 
       <section>
         <img src="./img/shirt.jpg" alt="" class="shirtPic">
-
       </section>
       <section>
-        <p>Visit one of our locations to get your very
-          own Salmon Shirt!</p>
-
+        <h2 style=" margin-top: 30px;">Visit one of our locations to get your very own Salmon Shirt!</h2>
       </section>
     </section>
 
-  </section>
-</div>
+  
+  <img src="./img/fish.jpg" alt="" class="fishHori">
+
 </main>
 <footer>
   &copy;2021 Pat's Shop. All rights reserved. 
